# glass-app

./: README.md  next.config.mjs  package-lock.json  package.json
app/: layout.js  page.js
app/api/agent/: route.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
