[package]
name = "glass"
version = "0.1.0"
description = "Glass — visual layer for terminal agents"
authors = []
license = ""
repository = ""
default-run = "glass"
edition = "2021"

[lib]
name = "glass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", features = ["json", "stream"] }
tokio        = { version = "1",    features = ["full"] }
futures-util = "0.3"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
